# munich-intel

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  companies.yaml  docker-compose.yml  index.html  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: main.py
data/: README.md
scripts/: ingest.py  test_scraper.py
src/munich_intel/: chunker.py  config.py  embedder.py  generator.py  indexer.py  pipeline.py  retriever.py  scraper.py
tests/: test_chunker.py  test_pipeline.py
